[gd_scene load_steps=9 format=3 uid="uid://gni7cn8wa1ws"]

[ext_resource type="Script" path="res://UI/LevelUpOptions.gd" id="1_hnxw3"]
[ext_resource type="Script" path="res://UI/Button.gd" id="2_hqkld"]
[ext_resource type="Theme" uid="uid://brjt2pwolmayy" path="res://assets/RetroGamingTheme.tres" id="2_qap56"]
[ext_resource type="Texture2D" uid="uid://daii1r46q77r8" path="res://assets/UpgradesButton.png" id="3_07dgc"]
[ext_resource type="Script" path="res://UI/SecondButton.gd" id="3_shk3t"]
[ext_resource type="Script" path="res://UI/ThirdButton.gd" id="4_8oauw"]
[ext_resource type="Texture2D" uid="uid://c0ulpjmkgwr2c" path="res://assets/UpgradesButton2.png" id="4_mc0yo"]
[ext_resource type="Texture2D" uid="uid://cs5mwmw7h0nlo" path="res://assets/MultiIcon.png" id="7_jax7h"]

[node name="LevelUpOptions" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_hnxw3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(500, 200)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 153.0
offset_top = -185.0
offset_right = 69.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="TitleCenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer/TitleCenterContainer"]
custom_minimum_size = Vector2(180, 64)
layout_mode = 2
theme = ExtResource("2_qap56")
bbcode_enabled = true
text = "[center]Upgrade your baby-throwing skills[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64
alignment = 1

[node name="FirstButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qap56")
texture_normal = ExtResource("3_07dgc")
texture_hover = ExtResource("4_mc0yo")
script = ExtResource("2_hqkld")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/FirstButton"]
layout_mode = 0
offset_left = 18.0
offset_top = 83.0
offset_right = 111.0
offset_bottom = 109.0
mouse_filter = 1
theme = ExtResource("2_qap56")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
scroll_active = false

[node name="UpgradeIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/FirstButton"]
layout_mode = 0
offset_left = 31.0
offset_top = 16.0
offset_right = 95.0
offset_bottom = 80.0
texture = ExtResource("7_jax7h")

[node name="SecondButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qap56")
texture_normal = ExtResource("3_07dgc")
texture_hover = ExtResource("4_mc0yo")
script = ExtResource("3_shk3t")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/SecondButton"]
layout_mode = 0
offset_left = 18.0
offset_top = 83.0
offset_right = 111.0
offset_bottom = 109.0
mouse_filter = 1
theme = ExtResource("2_qap56")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
scroll_active = false

[node name="UpgradeIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/SecondButton"]
layout_mode = 0
offset_left = 31.0
offset_top = 16.0
offset_right = 95.0
offset_bottom = 80.0
texture = ExtResource("7_jax7h")

[node name="ThirdButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qap56")
texture_normal = ExtResource("3_07dgc")
texture_hover = ExtResource("4_mc0yo")
script = ExtResource("4_8oauw")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ThirdButton"]
layout_mode = 0
offset_left = 18.0
offset_top = 83.0
offset_right = 111.0
offset_bottom = 109.0
mouse_filter = 1
theme = ExtResource("2_qap56")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
scroll_active = false

[node name="UpgradeIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/ThirdButton"]
layout_mode = 0
offset_left = 31.0
offset_top = 16.0
offset_right = 95.0
offset_bottom = 80.0
texture = ExtResource("7_jax7h")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/FirstButton" to="." method="_on_first_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SecondButton" to="." method="_on_second_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ThirdButton" to="." method="_on_third_button_pressed"]
